--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "big.js": "^6.2.1",
-    "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "mathjs": "^11.11.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "react-testing-library": "^8.0.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -42,8 +44,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20",
+    "@babel/core": "^7.22.17",
     "@babel/eslint-parser": "^7.22.15",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-syntax-jsx": "^7.22.5",
     "@babel/preset-react": "^7.22.15",
     "eslint": "^7.32.0",
@@ -53,9 +56,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.0.0",
-    "jest-fetch-mock": "^3.0.3",
     "node-sass": "^7.0.3",
-    "react-router-dom": "^6.16.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
